--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "ametsoc.doc.tar.xz": bbdbcfb0b86f0e8f3ff225fee508f0d23a625979
-  "ametsoc.tar.xz": f6079c93a0180b5800c7502a2ee50d64bfee6121
+  ametsoc.doc.tar.xz: 31459f6223d50471197489482a42ae9fa87ef7ca
+  ametsoc.tar.xz: 2fba67a4ab222f286af9cb36d92ac8fd4bb6d86d
